Fixed menu disappearing on smaller screens.

--- a/docs/style.css
+++ b/docs/style.css
@@ -6,9 +6,15 @@
     text-decoration: none;
 }
 
+@media screen and (max-height: 600px) {
+    body {
+        align-items: baseline !important;
+    }
+}
+
 body {
     display: flex;
-
+    
     width: 100vw;
     height: 100vh;
 
